Bug 409363 - When pausing video playback the video output can turn black
Summary: When pausing video playback the video output can turn black
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-gstreamer
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.9.0
Platform: Other Linux
: NOR normal
Target Milestone: 4.8
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-01 11:38 UTC by Méven Car
Modified: 2019-07-04 12:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Méven Car 2019-07-01 11:38:29 UTC
SUMMARY

When pausing a video playback the paused video can turn black, instead of showing latest video frame.
This is demonstrated in dolphin with patch https://phabricator.kde.org/D22183
but not in dragonplayer.
Resizing the window or moving the mouse around can make the last frame appear for an instant.

STEPS TO REPRODUCE
1. build dolphin with patch https://phabricator.kde.org/D22183
2. Preview a video
3. Click on the video playing

OBSERVED RESULT
The video is paused, the video output is black.

EXPECTED RESULT
The video is paused, last video frame is visible.


SOFTWARE/OS VERSIONS
Operating System: Kubuntu 19.04
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.60.0
Qt Version: 5.12.2
Kernel Version: 5.0.0-20-generic

ADDITIONAL INFORMATION
Comment 1 Daniel Vrátil 2019-07-03 19:38:08 UTC
I can reproduce. Looks like a bug in the default X11 renderer
Comment 2 Daniel Vrátil 2019-07-04 12:04:42 UTC
Git commit ff1f48bda6d21aa4dbda76c87ba8a1e7ab4b64e2 by Daniel Vrátil.
Committed on 04/07/2019 at 12:03.
Pushed by dvratil into branch '4.9'.

X11Renderer: don't blank overlay on pause

Summary:
FIXED-IN: 4.9.1

Test Plan:
Tested with Dolphin with patch D22050 applied, pausing a video preview
in Info pane by clicking on it no longer blanks the video widget.

Reviewers: O4 phonon, sitter

Reviewed By: O4 phonon, sitter

Differential Revision: https://phabricator.kde.org/D22254

M  +6    -4    gstreamer/x11renderer.cpp
M  +1    -1    gstreamer/x11renderer.h

https://commits.kde.org/phonon-gstreamer/ff1f48bda6d21aa4dbda76c87ba8a1e7ab4b64e2