X11Renderer: don't blank overlay on pause

Summary:
BUG: 409363
FIXED-IN: 4.9.1

Test Plan:
Tested with Dolphin with patch D22050 applied, pausing a video preview
in Info pane by clicking on it no longer blanks the video widget.

Reviewers: O4 phonon, sitter

Reviewed By: O4 phonon, sitter

Differential Revision: https://phabricator.kde.org/D22254